--- a/UserManagement/UserManagement_App/appsettings.json
+++ b/UserManagement/UserManagement_App/appsettings.json
@@ -8,7 +8,7 @@
     },
   "MongoDbSettings": {
     "ConnectionString": "mongodb://mongo-0.mongo,mongo-1.mongo,mongo-2.mongo",
-    "DatabaseName": "userManagement"
+    "DatabaseName": "UserManagement"
   },
     "Jwt": {
         "Key": "VanKhang_Key@123456!@#",
