chore: create user with security question

--- a/UserManagement/UserManagement_App/appsettings.json
+++ b/UserManagement/UserManagement_App/appsettings.json
@@ -7,8 +7,8 @@
         }
     },
   "MongoDbSettings": {
-    "ConnectionString": "mongodb://mongo-0.mongo,mongo-1.mongo,mongo-2.mongo",
-    "DatabaseName": "UserManagement"
+    "ConnectionString": "mongodb://127.0.0.1:27017/",
+    "DatabaseName": "userdb"
   },
     "Jwt": {
         "Key": "VanKhang_Key@123456!@#",
