--- a/UserManagement/Data/Data.csproj
+++ b/UserManagement/Data/Data.csproj
@@ -9,8 +9,8 @@
     <PackageReference Include="MongoDB.Bson" Version="2.11.0" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Constants\" />
     <Folder Include="DataAccess\" />
-    <Folder Include="MongoCollections\" />
     <Folder Include="Enums\" />
   </ItemGroup>
 </Project>
