chore: update appsettings for email info, add confirm security question api

--- a/UserManagement/UserManagement_App/appsettings.json
+++ b/UserManagement/UserManagement_App/appsettings.json
@@ -1,19 +1,19 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information"
-        }
-    },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
   "MongoDbSettings": {
     "ConnectionString": "mongodb://mongo-0.mongo,mongo-1.mongo,mongo-2.mongo",
     "DatabaseName": "UserManagement"
   },
-    "Jwt": {
-        "Key": "VanKhang_Key@123456!@#",
-        "Issuer": "VanKhang_ApiGateway"
-    },
+  "Jwt": {
+    "Key": "VanKhang_Key@123456!@#",
+    "Issuer": "VanKhang_ApiGateway"
+  },
 
   "AllowedHosts": "*",
   "RabbitMqConnection": {
@@ -21,5 +21,11 @@
     "Port": 32127,
     "Username": "user_module",
     "Password": "HCDCxBakco"
+  },
+  "EmailSettings": {
+    "ApiKey": "a105029713c9a23da123da240a7130b2-1d8af1f4-c81c46b4",
+    "ApiBaseUri": "https://api.mailgun.net/v3/",
+    "Domain": "usaid.bakco.vn",
+    "From": "postmaster@usaid.bakco.vn"
   }
 }
