--- a/UserManagement/UserManagement_App/appsettings.json
+++ b/UserManagement/UserManagement_App/appsettings.json
@@ -1,19 +1,19 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information"
-        }
-    },
-  "MongoDbSettings": {
-    "ConnectionString": "mongodb://mongo-0.mongo,mongo-1.mongo,mongo-2.mongo",
-    "DatabaseName": "UserManagement"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
   },
-    "Jwt": {
-        "Key": "VanKhang_Key@123456!@#",
-        "Issuer": "VanKhang_ApiGateway"
-    },
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb://longhdt:pass1234@mongo0.bakco.vn:27017,mongo1.bakco.vn:27017,mongo2.bakco.vn:27017/?replicaSet=rs0&readPreference=primary&serverSelectionTimeoutMS=5000&connectTimeoutMS=10000&authSource=admin&authMechanism=SCRAM-SHA-256",
+    "DatabaseName": "UserManagement_dev"
+  },
+  "Jwt": {
+    "Key": "VanKhang_Key@123456!@#",
+    "Issuer": "VanKhang_ApiGateway"
+  },
 
   "AllowedHosts": "*",
   "RabbitMqConnection": {
