--- a/UserManagement/Service/Service.csproj
+++ b/UserManagement/Service/Service.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Flurl" Version="3.0.2" />
+    <PackageReference Include="Flurl.Http" Version="3.2.0" />
+    <PackageReference Include="Google.Apis.Auth" Version="1.52.0" />
     <PackageReference Include="morelinq" Version="3.3.2" />
     <PackageReference Include="Bogus" Version="30.0.2" />
     <PackageReference Include="AutoMapper" Version="8.0.0" />
