--- a/UserManagement/UserManagement_App/appsettings.json
+++ b/UserManagement/UserManagement_App/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
   "MongoDbSettings": {
-    "ConnectionString": "mongodb://longhdt:pass1234@mongo0.bakco.vn:27017,mongo1.bakco.vn:27017,mongo2.bakco.vn:27017/?replicaSet=rs0&readPreference=primary&serverSelectionTimeoutMS=5000&connectTimeoutMS=10000&authSource=admin&authMechanism=SCRAM-SHA-256",
-    "DatabaseName": "UserManagement_dev"
+    "ConnectionString": "mongodb://127.0.0.1:27017/",
+    "DatabaseName": "userdb"
   },
   "Jwt": {
     "Key": "VanKhang_Key@123456!@#",
@@ -26,5 +26,13 @@
     "ApiBaseUri": "https://api.mailgun.net/v3/",
     "Domain": "usaid.bakco.vn",
     "From": "postmaster@usaid.bakco.vn"
+  },
+  "FacebookAuthSettings": {
+    "AppId": "2778304269053147",
+    "AppSecret": "498f0fd7b646ef88665a757c80ebbeec"
+  },
+  "GoogleAuthSettings": {
+    "AppId": "1056103441390-ijfcpmon449hqnh5ijq3pbnmr9ocdmi1.apps.googleusercontent.com",
+    "AppSecret": "R8jnt2wsgiA2rg4wpFHC_w3E"
   }
 }
