--- a/UserManagement/UserManagement_App/appsettings.json
+++ b/UserManagement/UserManagement_App/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
   "MongoDbSettings": {
-    "ConnectionString": "mongodb://longhdt:pass1234@mongo0.bakco.vn:27017,mongo1.bakco.vn:27017,mongo2.bakco.vn:27017/?replicaSet=rs0&readPreference=primary&serverSelectionTimeoutMS=5000&connectTimeoutMS=10000&authSource=admin&authMechanism=SCRAM-SHA-256",
-    "DatabaseName": "UserManagement_dev"
+    "ConnectionString": "mongodb://127.0.0.1:27017/",
+    "DatabaseName": "userdb"
   },
   "Jwt": {
     "Key": "VanKhang_Key@123456!@#",
