--- a/UserManagement/UserManagement_App/appsettings.json
+++ b/UserManagement/UserManagement_App/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "MongoDbSettings": {
-    "ConnectionString": "mongodb://127.0.0.1:27017/",
+    //"ConnectionString": "mongodb://127.0.0.1:27017/",
+    "ConnectionString": "mongodb://202.78.227.174:27017/",
     "DatabaseName": "userdb"
   },
   "Jwt": {
@@ -32,7 +33,7 @@
     "AppSecret": "498f0fd7b646ef88665a757c80ebbeec"
   },
   "GoogleAuthSettings": {
-    "AppId": "1056103441390-ijfcpmon449hqnh5ijq3pbnmr9ocdmi1.apps.googleusercontent.com",
-    "AppSecret": "R8jnt2wsgiA2rg4wpFHC_w3E"
+    "AppId": "923539945042-62rnqafhjeaj8s9mg24ssns4uls9u1br.apps.googleusercontent.com",
+    "AppSecret": "1RHKvxcxGvL_GMW8TR9mdtUg"
   }
 }
