--- a/UserManagement/UserManagement_App/appsettings.json
+++ b/UserManagement/UserManagement_App/appsettings.json
@@ -8,7 +8,7 @@
   },
   "MongoDbSettings": {
     //"ConnectionString": "mongodb://127.0.0.1:27017/",
-    "ConnectionString": "mongodb://202.78.227.174:27017/",
+    "ConnectionString": "mongodb://mongoadmin:BakcoZqa@202.78.227.174:27017/",
     "DatabaseName": "userdb"
   },
   "Jwt": {
