feat: implement SMS Service

--- a/UserManagement/UserManagement_App/appsettings.json
+++ b/UserManagement/UserManagement_App/appsettings.json
@@ -35,5 +35,10 @@
   "GoogleAuthSettings": {
     "AppId": "923539945042-62rnqafhjeaj8s9mg24ssns4uls9u1br.apps.googleusercontent.com",
     "AppSecret": "1RHKvxcxGvL_GMW8TR9mdtUg"
+  },
+  "SMSAuthorization": {
+    "Brandname": "Baotrixemay",
+    "ApiKey": "04B1F93A587C1744264987DD24F7CB",
+    "SecretKey": "BE31AC11CAE75AB31A225EF08AB00A"
   }
 }
