feat: sync create user elastic

--- a/UserManagement/UserManagement_App/appsettings.json
+++ b/UserManagement/UserManagement_App/appsettings.json
@@ -40,5 +40,12 @@
     "Brandname": "Baotrixemay",
     "ApiKey": "04B1F93A587C1744264987DD24F7CB",
     "SecretKey": "BE31AC11CAE75AB31A225EF08AB00A"
+  },
+  "ElasticSettings": {
+    "KibanaUrl": "https://kibana.hcdc.vn",
+    "Url": "https://elastic.hcdc.vn",
+    "Username": "elastic",
+    "Password": "S3YMspZCR237wh9Dvkl73441",
+    "DefaultRole": "pqm_viewer"
   }
 }
