change to elastic quanlyhiv

--- a/UserManagement/UserManagement_App/appsettings.json
+++ b/UserManagement/UserManagement_App/appsettings.json
@@ -42,10 +42,10 @@
     "SecretKey": "BE31AC11CAE75AB31A225EF08AB00A"
   },
   "ElasticSettings": {
-    "KibanaUrl": "https://kibana.hcdc.vn",
-    "Url": "https://elastic.hcdc.vn",
+    "KibanaUrl": "https://pqm-kibana.quanlyhiv.vn",
+    "Url": "https://pqm-elastic.bakco.vn",
     "Username": "elastic",
-    "Password": "S3YMspZCR237wh9Dvkl73441",
+    "Password": "3862xruxbq5Mn70o515FxayG",
     "DefaultRole": "pqm_viewer"
   }
 }
