--- a/UserManagement/UserManagement_App/appsettings.json
+++ b/UserManagement/UserManagement_App/appsettings.json
@@ -7,9 +7,9 @@
     }
   },
   "MongoDbSettings": {
-    //"ConnectionString": "mongodb://127.0.0.1:27017/",
-    "ConnectionString": "mongodb://mongoadmin:BakcoZqa@202.78.227.174:27017/",
-    "DatabaseName": "userdb"
+    "ConnectionString": "mongodb://longhdt:pass1234@mongo0.bakco.vn:27017,mongo1.bakco.vn:27017,mongo2.bakco.vn:27017/?replicaSet=rs0&serverSelectionTimeoutMS=5000&connectTimeoutMS=10000&authSource=admin&authMechanism=SCRAM-SHA-256",
+    //"ConnectionString": "mongodb://mongoadmin:BakcoZqa@202.78.227.174:27017/",
+    "DatabaseName": "hiv-userdb"
   },
   "Jwt": {
     "Key": "VanKhang_Key@123456!@#",
