Change rabbit MQ

--- a/UserManagement/UserManagement_App/appsettings.json
+++ b/UserManagement/UserManagement_App/appsettings.json
@@ -17,9 +17,9 @@
   },
   "AllowedHosts": "*",
   "RabbitMqConnection": {
-    "HostName": "202.78.227.81",
-    "Port": 32127,
-    "Username": "user_module",
+    "HostName": "202.78.227.174",
+    "Port": 5672,
+    "Username": "user-management",
     "Password": "HCDCxBakco"
   },
   "EmailSettings": {
