--- a/UserManagement/Service/Service.csproj
+++ b/UserManagement/Service/Service.csproj
@@ -8,6 +8,7 @@
 	  <PackageReference Include="Flurl" Version="3.0.2" />
 	  <PackageReference Include="Flurl.Http" Version="3.2.0" />
 	  <PackageReference Include="Google.Apis.Auth" Version="1.52.0" />
+	  <PackageReference Include="LazyCache.AspNetCore" Version="2.4.0" />
 	  <PackageReference Include="MassTransit.AspNetCore" Version="7.2.2" />
     <PackageReference Include="morelinq" Version="3.3.2" />
     <PackageReference Include="Bogus" Version="33.0.2" />
