feat: change cache to redis

--- a/UserManagement/UserManagement_App/appsettings.json
+++ b/UserManagement/UserManagement_App/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -47,5 +47,9 @@
     "Username": "elastic",
     "Password": "3862xruxbq5Mn70o515FxayG",
     "DefaultRole": "pqm_viewer"
+  },
+  "RedisSettings": {
+    "ConnectionString": "119.82.141.99:32379,password=4bdVyyrvZ3",
+    "InstanceName": "UserManagement"
   }
 }
