--- a/UserManagement/Service/Service.csproj
+++ b/UserManagement/Service/Service.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -10,6 +10,7 @@
 	  <PackageReference Include="Google.Apis.Auth" Version="1.52.0" />
 	  <PackageReference Include="LazyCache.AspNetCore" Version="2.4.0" />
 	  <PackageReference Include="MassTransit.AspNetCore" Version="7.2.2" />
+	  <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="3.1.22" />
     <PackageReference Include="morelinq" Version="3.3.2" />
     <PackageReference Include="Bogus" Version="33.0.2" />
     <PackageReference Include="AutoMapper" Version="10.1.1" />
