feat: add active or not in sms settings

--- a/UserManagement/UserManagement_App/appsettings.json
+++ b/UserManagement/UserManagement_App/appsettings.json
@@ -37,6 +37,7 @@
     "AppSecret": "1RHKvxcxGvL_GMW8TR9mdtUg"
   },
   "SMSAuthorization": {
+    "Active": false,
     "Brandname": "Baotrixemay",
     "ApiKey": "04B1F93A587C1744264987DD24F7CB",
     "SecretKey": "BE31AC11CAE75AB31A225EF08AB00A"
