--- a/UserManagement/UserManagement_App/appsettings.json
+++ b/UserManagement/UserManagement_App/appsettings.json
@@ -7,9 +7,8 @@
     }
   },
   "MongoDbSettings": {
-    "ConnectionString": "mongodb://longhdt:pass1234@mongo0.bakco.vn:27017,mongo1.bakco.vn:27017,mongo2.bakco.vn:27017/?replicaSet=rs0&serverSelectionTimeoutMS=5000&connectTimeoutMS=10000&authSource=admin&authMechanism=SCRAM-SHA-256&maxPoolSize=10000",
-    //"ConnectionString": "mongodb://mongoadmin:BakcoZqa@202.78.227.174:27017/",
-    "DatabaseName": "hiv-userdb"
+    "ConnectionString": "mongodb://root:OvWo2ayXvT@mongodb-0.mongodb-headless.default.svc.cluster.local:27017,mongodb-1.mongodb-headless.default.svc.cluster.local:27017,mongodb-2.mongodb-headless.default.svc.cluster.local:27017/?authSource=admin&replicaSet=rs0&connectTimeoutMS=10000&readPreference=primary&appname=MongoDB%20Compass&ssl=false",
+    "DatabaseName": "userdb"
   },
   "Jwt": {
     "Key": "VanKhang_Key@123456!@#",
