--- a/UserManagement/UserManagement_App/appsettings.json
+++ b/UserManagement/UserManagement_App/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "MongoDbSettings": {
-    "ConnectionString": "mongodb://root:OvWo2ayXvT@mongodb-0.mongodb-headless.default.svc.cluster.local:27017,mongodb-1.mongodb-headless.default.svc.cluster.local:27017,mongodb-2.mongodb-headless.default.svc.cluster.local:27017/?authSource=admin&replicaSet=rs0&connectTimeoutMS=10000&readPreference=primary&appname=MongoDB%20Compass&ssl=false",
+    //"ConnectionString": "mongodb://root:OvWo2ayXvT@mongodb-0.mongodb-headless.default.svc.cluster.local:27017,mongodb-1.mongodb-headless.default.svc.cluster.local:27017,mongodb-2.mongodb-headless.default.svc.cluster.local:27017/?authSource=admin&replicaSet=rs0&connectTimeoutMS=10000&readPreference=primary&appname=MongoDB%20Compass&ssl=false",
+    "ConnectionString": "mongodb://root:OvWo2ayXvT@192.168.35.11:27017/?authSource=admin&replicaSet=rs0&connectTimeoutMS=10000&readPreference=primary&appname=MongoDB%20Compass&ssl=false",
     "DatabaseName": "userdb"
   },
   "Jwt": {
@@ -42,10 +43,12 @@
     "SecretKey": "BE31AC11CAE75AB31A225EF08AB00A"
   },
   "ElasticSettings": {
-    "KibanaUrl": "https://pqm-kibana.quanlyhiv.vn",
-    "Url": "https://pqm-elastic.bakco.vn",
+    "KibanaUrl": "https://kibana:5601",
+    //"KibanaUrl": "https://192.168.35.11:31111",
+    "Url": "https://elasticsearch-master:9200",
+    //"Url": "https://192.168.35.11:31112",
     "Username": "elastic",
-    "Password": "3862xruxbq5Mn70o515FxayG",
+    "Password": "vXVWD81ms2s6B56KVGQO",
     "DefaultRole": "pqm_viewer"
   },
   "RedisSettings": {
