--- a/UserManagement/UserManagement_App/appsettings.json
+++ b/UserManagement/UserManagement_App/appsettings.json
@@ -7,9 +7,9 @@
     }
   },
   "MongoDbSettings": {
-    //"ConnectionString": "mongodb://root:OvWo2ayXvT@mongodb-0.mongodb-headless.default.svc.cluster.local:27017,mongodb-1.mongodb-headless.default.svc.cluster.local:27017,mongodb-2.mongodb-headless.default.svc.cluster.local:27017/?authSource=admin&replicaSet=rs0&connectTimeoutMS=10000&readPreference=primary&appname=MongoDB%20Compass&ssl=false",
-    "ConnectionString": "mongodb://root:OvWo2ayXvT@192.168.35.11:27017/?authSource=admin&replicaSet=rs0&connectTimeoutMS=10000&readPreference=primary&appname=MongoDB%20Compass&ssl=false",
-    "DatabaseName": "userdb"
+    "ConnectionString": "mongodb://longhdt:pass1234@mongo0.bakco.vn:27017,mongo1.bakco.vn:27017,mongo2.bakco.vn:27017/?replicaSet=rs0&serverSelectionTimeoutMS=5000&connectTimeoutMS=10000&authSource=admin&authMechanism=SCRAM-SHA-256&maxPoolSize=10000",
+    //"ConnectionString": "mongodb://mongoadmin:BakcoZqa@202.78.227.174:27017/",
+    "DatabaseName": "hiv-userdb"
   },
   "Jwt": {
     "Key": "VanKhang_Key@123456!@#",
@@ -43,12 +43,10 @@
     "SecretKey": "BE31AC11CAE75AB31A225EF08AB00A"
   },
   "ElasticSettings": {
-    "KibanaUrl": "https://kibana:5601",
-    //"KibanaUrl": "https://192.168.35.11:31111",
-    "Url": "https://elasticsearch-master:9200",
-    //"Url": "https://192.168.35.11:31112",
+    "KibanaUrl": "https://pqm-kibana.quanlyhiv.vn",
+    "Url": "https://pqm-elastic.bakco.vn",
     "Username": "elastic",
-    "Password": "vXVWD81ms2s6B56KVGQO",
+    "Password": "3862xruxbq5Mn70o515FxayG",
     "DefaultRole": "pqm_viewer"
   },
   "RedisSettings": {
